# dilsayar

./: .clang-tidy  CMakeLists.txt  README.md
res/: dil.dil
res/test/: left_factoring.dil  left_recursion.dil  multi_start.dil  no_start.dil  redefinition.dil  redundant_skip.dil  undefined_reference.dil
src/: main.c  main.cc
src/dil/: analyzer.c  buffer.c  builder.c  error.c  file.c  generator.c  hasher.cc  indexmap.c  indices.c  ix.cc  list.cc  object.c  parsecontext.c  parser.c  rule.c  source.c  split.cc  string.c  stringlist.c  stringlistlist.c  stringset.c  stringsetmap.c  tally.cc  tree.c  view.cc
